# tamber

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GOAL.md  Makefile  PHASE0_PLAN.md  PLAN.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: api.rs  app.rs  config.rs  main.rs  planner.rs  session.rs  session_store.rs  types.rs
cli/src/ui/: mod.rs
cli/src/ui/splash/: mod.rs  note.rs
client/: .gitignore  package.json  tamagui.config.ts  tamagui.d.ts  tokens.ts  tsconfig.base.json
client/apps/desktop/: electron-builder.yml  index.html  package.json  tsconfig.json  vite.config.mts  vite.config.ts
client/apps/desktop/electron/: main.ts  preload.ts  tsconfig.json
client/apps/desktop/src/: App.tsx  global.css  main.tsx
docs/: AUDIO_PIPELINE.md  CLIENT.md  COMPOSITION.md  CONDITIONING.md  CONTRIBUTING.md  MOBILE.md  MUSICGEN.md  PLANNER_SYNC.md  RIFFUSION.md  TROUBLESHOOTING.md  TUI_GUIDE.md  architecture.md  setup.md
docs/adrs/: ADR-001-hybrid-architecture.md  ADR-002-transport-strategy.md  ADR-003-audio-conditioning.md  ADR-004-planner-mirroring.md  README.md
docs/schemas/: README.md  generation_artifact.json  generation_request.json  generation_status.json
docs/testing/: e2e.md
ios/Resources/: Info.plist
ios/Sources/AppMain/: AppEnvironment.swift  TimbreMobileApp.swift
ios/Sources/DesignSystem/: AnimatedNoteView.swift  DesignTokens.swift  GlassPanel.swift
ios/Sources/Features/Landing/: LandingView.swift
ios/Sources/Models/: JobModels.swift
ios/Sources/Networking/: WorkerClient.swift
ios/Tests/: TimbreMobileTests.swift
ios/TimbreMobile.xcodeproj/: project.pbxproj
ios/TimbreMobile.xcodeproj/xcshareddata/xcschemes/: TimbreMobile.xcscheme
planner/: lexicon.json
scripts/: riffusion_smoke.py
worker/: README.md  pyproject.toml
worker/src/timbre_worker/: __init__.py  generate.py
worker/src/timbre_worker/app/: __init__.py  jobs.py  main.py  models.py  routes.py  sessions.py  settings.py
worker/src/timbre_worker/data/: genre_profiles.yaml
worker/src/timbre_worker/services/: __init__.py  audio_utils.py  exceptions.py  genre_classifier.py  musicgen.py  orchestrator.py  planner.py  riffusion.py  riffusion_spectrogram.py  types.py
worker/tests/: __init__.py  test_generate_cli.py  test_genre_classifier.py  test_job_manager.py  test_musicgen_service.py  test_orchestrator.py  test_placeholder.py  test_planner.py  test_riffusion_service.py  test_riffusion_spectrogram.py
