[workspace]
members = ["cli"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.26"
crossterm = "0.27"
rodio = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
indexmap = "2"
once_cell = "1.19"
unicode-normalization = "0.1"
rand = "0.8"
