[project]
name = "timbre-worker"
version = "0.1.0"
description = "Audio generation service for the Timbre CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Timbre Team" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "loguru>=0.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
  "mypy>=1.8",
  "httpx>=0.26"
]
inference = [
  "torch>=2.2",
  "diffusers>=0.26",
  "accelerate>=0.27",
  "safetensors>=0.4",
  "soundfile>=0.12",
  "torchaudio>=2.2",
  "huggingface-hub>=0.20",
  "numpy>=1.26",
  "transformers>=4.39",
  "scipy>=1.11",
  "riffusion>=0.0.4",
  "librosa>=0.10"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
packages = ["timbre_worker"]
strict = false
ignore_missing_imports = true
